<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DinnerPlanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_desc">Welcome to Dinner Planner !\n\nHere you will be able to easily plan\nyour dinner.\n\nOn the next page start by\nselecting number of participants.\nThen select your courses.\n\nWatch Magic Happen!</string>
    <string name="ins_crostini">Turn on the oven at 150C.\nCarve bread\nPut tomato and cheese on bread\nPlace in oven for 10 min.</string>
    <string name="text_starter">Starter</string>
    <string name="text_main">Main</string>
    <string name="text_dessert">Dessert</string>
    <string name="start_button">Start</string>
    <string name="text_participants">Participants</string>
    <string name="text_totalCost">Total Cost:</string>
    <string name="text_choosemenu">Choose Menu</string>
    <string name="text_create">Create</string>
    <string name="BigOvenAppid">18f3cT02U9f6yRl3OKDpP8NA537kxYKu</string>
    <string name="BigOvenDishName">Title</string>
    <string name="BigOvenDishType">Category</string>
    <string name="BigOvenDishImage">ImageURL</string>
    <string name="BigOvenDishId">RecipeID</string>

</resources>
